@startuml

title __CORE DOMAIN VAGA's Class Diagram__\n

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.vaga {
        class com.soundlab.dockerizedjavaapi.core.domain.vaga.Vaga {
            - city : String
            - expirationDate : LocalDateTime
            - id : Long
            - longDescription : String
            - ownerId : Long
            - respostas : List<Resposta>
            - shortDescription : String
            - state : String
            - timeSpan : String
            - vagaCriterios : List<VagaCriterio>
            + Vaga()
            + equals()
            + getCity()
            + getExpirationDate()
            + getId()
            + getLongDescription()
            + getOwner()
            + getOwnerId()
            + getPerfil()
            + getRespostas()
            + getRespostasCount()
            + getShortDescription()
            + getState()
            + getTimeSpan()
            + getType()
            + getVagaCriterios()
            + hashCode()
            + setCity()
            + setExpirationDate()
            + setId()
            + setLongDescription()
            + setOwner()
            + setOwnerId()
            + setRespostas()
            + setShortDescription()
            + setState()
            + setTimeSpan()
            + setType()
            + setVagaCriterios()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.vaga {
        class com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio {
            - description : String
            - id : Long
            - name : String
            - position : int
            + VagaCriterio()
            + equals()
            + getDescription()
            + getId()
            + getName()
            + getPmd()
            + getPosition()
            + getWeight()
            + hashCode()
            + setDescription()
            + setId()
            + setName()
            + setPmd()
            + setPosition()
            + setWeight()
            + toString()
            # canEqual()
        }
      }
    }
  }
  

  namespace com.soundlab.dockerizedjavaapi {
    namespace core {
      namespace domain.vaga {
        enum VagaType {
          CLT
          PJ
          description
          id
        }
      }
    }
  }
  

  com.soundlab.dockerizedjavaapi.core.domain.vaga.Vaga -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.vaga.Vaga o-- com.soundlab.dockerizedjavaapi.core.domain.user.Empresa : owner
  com.soundlab.dockerizedjavaapi.core.domain.vaga.Vaga o-- com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaType : type
  com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio -up-|> com.soundlab.dockerizedjavaapi.core.AuditableEntity
  com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio o-- com.soundlab.dockerizedjavaapi.core.Level : pmd
  com.soundlab.dockerizedjavaapi.core.domain.vaga.VagaCriterio o-- com.soundlab.dockerizedjavaapi.core.Level : weight


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
